@@ -9,10 +9,8 @@ import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.POST_CODE
 import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.SCAN_DOCUMENTS;
 import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.YES;
 import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanFl401Constants.APPLICANT_ADDRESS_POSTCODE;
-import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanFl401Constants.APPLICANT_DATE_OF_BIRTH;
 import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanFl401Constants.APPLICANT_DATE_OF_BIRTH_MESSAGE;
 import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanFl401Constants.BAIL_CONDITION_END_DATE_MESSAGE;
-import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanFl401Constants.RESPONDENT_BAIL_CONDITIONS_ENDDATE;
 import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanFl401Constants.TEXT_AND_NUMERIC_MONTH_PATTERN;
 import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanFl401Constants.VALID_DATE_WARNING_MESSAGE;
 import static uk.gov.hmcts.reform.bulkscan.helper.BulkScanTransformHelper.transformScanDocuments;
@@ -24,17 +22,23 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import lombok.AllArgsConstructor;
 import lombok.NoArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
 import org.springframework.web.client.HttpClientErrorException;
+import uk.gov.hmcts.reform.bulkscan.clients.CourtFinderApi;
 import uk.gov.hmcts.reform.bulkscan.config.BulkScanFormValidationConfigManager;
 import uk.gov.hmcts.reform.bulkscan.config.BulkScanTransformConfigManager;
 import uk.gov.hmcts.reform.bulkscan.constants.BulkScanFl401Constants;
-import uk.gov.hmcts.reform.bulkscan.enums.FL401StopRespondentBehaviourChildEnum;
 import uk.gov.hmcts.reform.bulkscan.enums.FL401StopRespondentEnum;
+import uk.gov.hmcts.reform.bulkscan.exception.OcrMappingException;
 import uk.gov.hmcts.reform.bulkscan.exception.PostCodeValidationException;
 import uk.gov.hmcts.reform.bulkscan.group.util.BulkScanGroupValidatorUtil;
 import uk.gov.hmcts.reform.bulkscan.helper.BulkScanTransformHelper;
@@ -46,9 +50,12 @@ import uk.gov.hmcts.reform.bulkscan.model.BulkScanValidationResponse;
 import uk.gov.hmcts.reform.bulkscan.model.CaseCreationDetails;
 import uk.gov.hmcts.reform.bulkscan.model.FormType;
 import uk.gov.hmcts.reform.bulkscan.model.OcrDataField;
+import uk.gov.hmcts.reform.bulkscan.model.court.Court;
+import uk.gov.hmcts.reform.bulkscan.model.court.ServiceArea;
 import uk.gov.hmcts.reform.bulkscan.services.postcode.PostcodeLookupService;
 import uk.gov.hmcts.reform.bulkscan.utils.DateUtil;
 
+@Slf4j
 @NoArgsConstructor
 @AllArgsConstructor
 @Service
@@ -69,6 +76,8 @@ public class BulkScanFL401Service implements BulkScanService {
 
     @Autowired PostcodeLookupService postcodeLookupService;
 
+    @Autowired CourtFinderApi courtFinderApi;
+
     @Override
     public BulkScanValidationResponse validate(
             BulkScanValidationRequest bulkScanValidationRequest) {
@@ -85,18 +94,25 @@ public class BulkScanFL401Service implements BulkScanService {
         response.addWarning(
                 dependencyValidationService.getDependencyWarnings(inputFieldMap, FormType.FL401));
 
-        response.addWarning(
+        if (YES.equalsIgnoreCase(inputFieldMap.get("respondentBailConditions"))) {
+            response.addWarning(
                 validateInputDate(
-                        ocrDataFields,
-                        RESPONDENT_BAIL_CONDITIONS_ENDDATE,
-                        BAIL_CONDITION_END_DATE_MESSAGE));
+                    ocrDataFields,
+                    "respondentBailConditions_EndDate_Day",
+                    "respondentBailConditions_EndDate_Month",
+                    "respondentBailConditions_EndDate_Year",
+                    BAIL_CONDITION_END_DATE_MESSAGE));
+        }
 
         bulkScanFL401ValidationService.validateApplicantRespondentRelationhip(
                 inputFieldMap, response);
 
         response.addWarning(
                 validateInputDate(
-                        ocrDataFields, APPLICANT_DATE_OF_BIRTH, APPLICANT_DATE_OF_BIRTH_MESSAGE));
+                    ocrDataFields,
+                    "applicantDoB_DD",
+                    "applicantDoB_MM",
+                    "applicantDoB_YYYY", APPLICANT_DATE_OF_BIRTH_MESSAGE));
 
         response.addWarning(isValidPostCode(inputFieldMap, APPLICANT_ADDRESS_POSTCODE));
 
@@ -134,10 +150,8 @@ public class BulkScanFL401Service implements BulkScanService {
                 }
             } catch (PostCodeValidationException e) {
                 // if postocde is wrong then postcode lookup service will throw exception
-                if (e.getCause() instanceof HttpClientErrorException
-                        && ((HttpClientErrorException) e.getCause())
-                                .getStatusCode()
-                                .equals(HttpStatus.BAD_REQUEST)) {
+                if (e.getCause() instanceof HttpClientErrorException cause
+                        && HttpStatus.BAD_REQUEST.equals(cause.getStatusCode())) {
                     return List.of(String.format(POST_CODE_MESSAGE, APPLICANT_ADDRESS_POSTCODE));
                 }
             }
@@ -155,11 +169,9 @@ public class BulkScanFL401Service implements BulkScanService {
         List<String> warningLst = new ArrayList<>();
         String applyingOrder =
                 inputFieldMap.get(BulkScanFl401Constants.APPLYING_FOR_NON_MOLES_STATION_ORDER);
-        if (hasText(applyingOrder) && applyingOrder.equalsIgnoreCase(YES)) {
-
+        if (YES.equalsIgnoreCase(applyingOrder)) {
             validateStopRespondedDoing(inputFieldMap, warningLst);
         }
-
         return warningLst;
     }
 
@@ -176,18 +188,6 @@ public class BulkScanFL401Service implements BulkScanService {
             warningLst.add(
                     String.format(MANDATORY_ERROR_MESSAGE, "Respondent's behaviour options 6.2 "));
         }
-        boolean stopRespondentFromDoingToChild = false;
-        for (FL401StopRespondentBehaviourChildEnum l :
-                EnumSet.allOf(FL401StopRespondentBehaviourChildEnum.class)) {
-            String key = l.getKey();
-            if (hasText(inputFieldMap.get(key)) && inputFieldMap.get(key).equalsIgnoreCase(YES)) {
-                stopRespondentFromDoingToChild = true;
-            }
-        }
-        if (!stopRespondentFromDoingToChild) {
-            warningLst.add(
-                    String.format(MANDATORY_ERROR_MESSAGE, "Respondent's behaviour options 6.3"));
-        }
     }
 
     @Override
@@ -199,6 +199,13 @@ public class BulkScanFL401Service implements BulkScanService {
     @SuppressWarnings("unchecked")
     public BulkScanTransformationResponse transform(
             BulkScanTransformationRequest bulkScanTransformationRequest) {
+        BulkScanValidationResponse bulkScanValidationResponse = validate(BulkScanValidationRequest.builder()
+                     .ocrdatafields(bulkScanTransformationRequest.getOcrdatafields()).build());
+        if (!CollectionUtils.isEmpty(bulkScanValidationResponse.getWarnings())) {
+            log.warn(bulkScanValidationResponse.getWarnings().toString());
+            throw new OcrMappingException("Please resolve all warnings before creating the case",
+                                          bulkScanValidationResponse.getWarnings());
+        }
         List<OcrDataField> inputFieldsList = bulkScanTransformationRequest.getOcrdatafields();
 
         FormType formType = getCaseType();
@@ -206,10 +213,6 @@ public class BulkScanFL401Service implements BulkScanService {
         Map<String, String> inputFieldsMap = getOcrDataFieldAsMap(inputFieldsList);
 
         List<String> unknownFieldsList = null;
-
-        BulkScanFormValidationConfigManager.ValidationConfig validationConfig =
-                configManager.getValidationConfig(formType);
-
         Map<String, Object> populatedMap =
                 (Map<String, Object>)
                         BulkScanTransformHelper.transformToCaseData(
@@ -220,12 +223,22 @@ public class BulkScanFL401Service implements BulkScanService {
                                 inputFieldsMap);
 
         populatedMap.put(SCAN_DOCUMENTS, transformScanDocuments(bulkScanTransformationRequest));
-
-        Map<String, String> caseTypeAndEventId =
-                transformConfigManager.getTransformationConfig(formType).getCaseFields();
-
         bulkScanFL401ConditionalTransformerService.transform(populatedMap, inputFieldsMap);
-
+        ObjectMapper objectMapper = new ObjectMapper();
+        objectMapper.registerModule(new JavaTimeModule());
+        populatedMap.put(
+            SCAN_DOCUMENTS,
+            objectMapper.convertValue(BulkScanC100ConditionalTransformerService
+                                          .transformScanDocuments(bulkScanTransformationRequest), List.class));
+        populatedMap.put("caseTypeOfApplication", "FL401");
+        if (hasText(inputFieldsMap.get("applicant_Address_Postcode"))) {
+            populatedMap.put("courtName", getNearestFamilyCourt(inputFieldsMap.get("applicant_Address_Postcode")));
+        }
+        String caseName = buildCaseName(inputFieldsMap);
+        populatedMap.put("caseNameHmctsInternal", caseName);
+        populatedMap.put("applicantCaseName", caseName);
+        Map<String, String> caseTypeAndEventId =
+            transformConfigManager.getTransformationConfig(formType).getCaseFields();
         BulkScanTransformationResponse.BulkScanTransformationResponseBuilder builder =
                 BulkScanTransformationResponse.builder()
                         .caseCreationDetails(
@@ -234,7 +247,8 @@ public class BulkScanFL401Service implements BulkScanService {
                                         .eventId(caseTypeAndEventId.get(EVENT_ID))
                                         .caseData(populatedMap)
                                         .build());
-
+        BulkScanFormValidationConfigManager.ValidationConfig validationConfig =
+            configManager.getValidationConfig(formType);
         if (nonNull(validationConfig)) {
             unknownFieldsList =
                     bulkScanValidationHelper.findUnknownFields(
@@ -248,18 +262,24 @@ public class BulkScanFL401Service implements BulkScanService {
     }
 
     private List<String> validateInputDate(
-            List<OcrDataField> ocrDataFields, String fieldName, String message) {
+        List<OcrDataField> ocrDataFields, String day, String month, String year, String message) {
 
         final Map<String, String> ocrDataFieldsMap = getOcrDataFieldAsMap(ocrDataFields);
 
         if (null != ocrDataFieldsMap
-                && ocrDataFieldsMap.containsKey(fieldName)
-                && hasText(ocrDataFieldsMap.get(fieldName))) {
-            String date = ocrDataFieldsMap.get(fieldName);
-
+                && ocrDataFieldsMap.containsKey(day)
+                && hasText(ocrDataFieldsMap.get(day)) && ocrDataFieldsMap.containsKey(month)
+                && hasText(ocrDataFieldsMap.get(month))
+                && ocrDataFieldsMap.containsKey(year) && hasText(ocrDataFieldsMap.get(year))) {
+            String date = ocrDataFieldsMap.get(year) + "-" + ocrDataFieldsMap.get(month) + "-" + ocrDataFieldsMap.get(day);
             return validateDate(Objects.requireNonNull(date), message);
         }
-        return Collections.emptyList();
+        return List.of(String.format(VALID_DATE_WARNING_MESSAGE, message));
+    }
+
+    private String buildCaseName(Map<String, String> populatedMap) {
+        return populatedMap.get("applicantFirstName") + " " + populatedMap.get("applicantLastName")
+            + " & " + populatedMap.get("respondentFirstName") + " " + populatedMap.get("respondentLastName");
     }
 
     private List<String> validateDate(String date, String fieldName) {
@@ -271,4 +291,24 @@ public class BulkScanFL401Service implements BulkScanService {
         }
         return Collections.emptyList();
     }
+
+    public String getNearestFamilyCourt(String postCode) {
+        ServiceArea serviceArea = null;
+        try {
+            serviceArea = courtFinderApi
+                .findClosestDomesticAbuseCourtByPostCode(postCode);
+
+        } catch (Exception e) {
+            log.error("CourtFinderService.getNearestFamilyCourt() method is throwing exception : {}",e.getMessage());
+        }
+        Court court = null;
+        if (serviceArea != null
+            && !CollectionUtils.isEmpty(serviceArea.getCourts())) {
+            court = courtFinderApi.getCourtDetails(serviceArea.getCourts()
+                                                       .get(0)
+                                                       .getCourtSlug());
+        }
+        return null != court ? court.getCourtName() : null;
+    }
+
 }
